--- a/package.json
+++ b/package.json
@@ -23,12 +23,23 @@
     "@feathery/react": "^2.0.444",
     "@formbricks/js": "^1.6.5",
     "@preact/signals-react": "^2.0.1",
+    "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-toast": "1.1.5",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "dayjs": "1.11.10",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-draw": "^1.0.4",
+    "lucide-react": "0.371.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-day-picker": "8.10.1",
+    "react-dom": "^18",
+    "tailwind-merge": "2.2.2",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "19.2.2",
@@ -41,9 +52,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
+    "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.3.0",
