--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@feathery/react": "^2.0.444",
     "@formbricks/js": "^1.6.5",
     "@preact/signals-react": "^2.0.1",
+    "@radix-ui/react-checkbox": "1.0.4",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-toast": "1.1.5",
+    "@tanstack/react-table": "8.16.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "dayjs": "1.11.10",
